Revisi Middleware, Article Tags, Setting, and Layout

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -43173,4 +43173,65 @@ html[dir="rtl"] body.dark-only .page-wrapper .page-body-wrapper .page-body .card
     }
 }
 
+/*===== Tags Input plugin =====*/
+
+.tagsinput {
+  border: 1px solid #d5d5d5;
+  background: #fff;
+  padding: 0 0 3px 0;
+  width: 100%;
+  overflow-y: auto;
+}
+.tagsinput span.tag {
+  display: block;
+  float: left;
+  position: relative;
+  padding: 7px 12px 8px 26px;
+  background: #239169;
+  color: #fff;
+  margin: 3px 0 0 3px;
+}
+.tagsinput span.tag a {
+  display: block;
+  text-indent: -9999px;
+  width: 12px;
+  height: 12px;
+  position: absolute;
+  left: 8px;
+  top: 10px;
+  outline: none;
+  background: url(../images/other-images/clear_results.png) no-repeat 50%;
+}
+.tagsinput span.tag a:hover {
+  opacity: 0.6;
+  filter: alpha(Opacity=60);
+}
+.tagsinput input {
+  width: 120px;
+  border: none;
+  padding: 7px 12px 8px 12px;
+  background: transparent;
+  margin: 3px 0 0 0;
+}
+.tagsinput input:focus {
+  outline: 0;
+}
+.tagsinput div {
+  display: block;
+  float: left;
+  position: relative;
+  margin-left: 3px;
+}
+.tags_clear {
+  clear: both;
+  height: 0px;
+}
+.not_valid {
+  background: #FBD8DB !important;
+  color: #90111A !important;
+}
+.tagsinput .ui-helper-hidden-accessible {
+  display: none;
+}
+
 /*# sourceMappingURL=style.css.map */
